# BELKAml

./: README.md  pyproject.toml  run_train.py
.github/workflows/: ci.yml  deploy-ingestion.yml  deploy-website.yml  deploy.yml  pipeline.yml
configs/: train_config.yaml  vertex_train_config.yaml
layers/: layers.py
metrics/: auc.py
src/: train.py
src/ingestion/: Dockerfile  cloudbuild.yaml  config.yaml  main.py  pipeline.py  requirements.txt
src/losses/: __init__.py  categorical.py  focal.py
src/metrics/: __init__.py  auc.py
src/model/: __init__.py  belkaml_arch.py  layers.py
src/utils/: __init__.py  data_utils.py  model_utils.py  torch_data_utils.py
src/vertex_ai/: cloudbuild.yaml
src/vertex_ai/components/: __init__.py  deploy.py  ingest.py  preprocess.py  split.py  test.py  train.py
src/vertex_ai/components/training/: Dockerfile
src/vertex_ai/jobs/: train_pipeline_job.py
src/vertex_ai/pipelines/: train_pipeline.py  training_pipeline.py
tests/: test_loss_and_metrics.py  test_precommit.py
website/frontend/: vite.config.js
